# roomtalk

./: .dockerignore  .env.compose.example  .gitignore  CLAUDE.md  COMMIT_REVIEW.en.md  COMMIT_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  DESIGN.md  DESIGN.zh.md  DeploymentGuide.md  Dockerfile  README.md  README.zh.md  SECURITY.md  SECURITY.zh.md  compose.yaml  部署指南.md
client-heroui/: README.md  README.zh.md  package-lock.json  package.json  playwright.codex.config.ts  playwright.postgres.config.ts  tsconfig.json
docs/: README.md  README.zh.md  a2ui-streaming-implementation.md  a2ui-streaming-implementation.zh.md  ai-run-outbox-worker-migration-plan.md  ai-run-outbox-worker-migration-plan.zh.md  assistant-run-bullmq-design-progress.md  assistant-run-bullmq-design-progress.zh.md  aws-migration-guide.md  ci-cd-build-optimization.md  ci-cd-build-optimization.zh.md  (+75 more)
server/roomtalk_coco_runner/: pyproject.toml
server/roomtalk_coco_runner/roomtalk_coco_runner/: __init__.py  codex_app_server.py  codex_cli.py  codex_sdk_app_server.py  platform_tools.py  runner.py
server/roomtalk_coco_runner/tests/: test_codex_app_server.py  test_codex_cli.py  test_codex_sdk_app_server.py  test_platform_tools.py  test_runner.py
server/roomtalk_code_agent_runner/: pyproject.toml
server/roomtalk_code_agent_runner/roomtalk_code_agent_runner/: __init__.py  _codex_app_server_protocol.py  codex_app_server.py  codex_cli.py  codex_sdk_app_server.py  constants.py  daemon.py  platform_tools.py  room_context_broker.py  runner.py
server/roomtalk_code_agent_runner/tests/: test_codex_app_server.py  test_codex_app_server_protocol.py  test_codex_cli.py  test_codex_sdk_app_server.py  test_daemon.py  test_plan_shell_policy.py  test_platform_tools.py  test_room_context_broker.py  test_runner.py
(+277 files in other folders)
