[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomtalk-coco-runner"
version = "0.1.6"
description = "RoomTalk JSONL adapter for the Coco coding assistant"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
roomtalk-coco-runner = "roomtalk_coco_runner.runner:main"
roomtalk-codex-cli-runner = "roomtalk_coco_runner.codex_cli:main"
roomtalk-codex-app-server-runner = "roomtalk_coco_runner.codex_app_server:main"
roomtalk-codex-sdk-app-server-runner = "roomtalk_coco_runner.codex_sdk_app_server:main"
roomtalk = "roomtalk_coco_runner.platform_tools:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roomtalk_coco_runner*"]
